add asset and comment ul

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TreydBuddy — Login</title>
-  <link rel="stylesheet" href="auth.css" />
+  <link rel="stylesheet" href="./assets/auth.css" />
 </head>
 <body>
   <main class="auth-shell">
@@ -17,7 +17,7 @@
         </a>
 
         <h1 class="hero-title">Event Reservations & Attendance<br />for BPSU-TREYD</h1>
-        <p class="hero-sub">
+        <!-- <p class="hero-sub">
           Secure access for students and admins to manage events, reservations, billing, and attendance.
         </p>
 
@@ -34,7 +34,7 @@
             <span class="check">✓</span>
             <div>Attendance records and billing info in one place.</div>
           </li>
-        </ul>
+        </ul> -->
 
         <p class="hero-footnote">
           BPSU-TREYD • TREYDBUDDY
