--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TreydBuddy — Create Account</title>
-  <link rel="stylesheet" href="auth.css" />
+  <link rel="stylesheet" href="./assets/auth.css" />
 </head>
 <body>
   <main class="auth-shell">
@@ -21,7 +21,7 @@
           Create your account to reserve tickets, track attendance, and stay updated on campus events.
         </p>
 
-        <ul class="hero-list">
+        <!-- <ul class="hero-list">
           <li>
             <span class="check">✓</span>
             <div>Separate roles for Students and Admins.</div>
@@ -34,7 +34,7 @@
             <span class="check">✓</span>
             <div>Works with billing/reservation module</div>
           </li>
-        </ul>
+        </ul> -->
 
         <p class="hero-footnote">
           Need to sign in? <a href="login.html" style="color:#ff0000; text-decoration:none;">Go to Login</a>
