--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TreydBuddy — Admin Dashboard</title>
-  <link rel="stylesheet" href="dashboard.css" />
+  <link rel="stylesheet" href="./assets/dashboard.css" />
 </head>
 <body>
   <div class="layout">
