--- a/admin/admin-dashboard.html
+++ b/admin/admin-dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TreydBuddy — Admin Dashboard</title>
-  <link rel="stylesheet" href="./assets/dashboard.css" />
+  <link rel="stylesheet" href="../assets/dashboard.css" />
 </head>
 <body>
   <div class="layout">
@@ -37,7 +37,7 @@
       </nav>
 
       <div class="sidebar-footer">
-        <form action="/treydbuddy2/auth-logout.php" method="post">
+        <form action="/treydbuddy2/auth/auth-logout.php" method="post">
           <button type="submit" class="btn btn-ghost" style="width:100%;">Sign out</button>
         </form>
       </div>
