--- a/student/student-dashboard.html
+++ b/student/student-dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TreydBuddy — Student Dashboard</title>
-  <link rel="stylesheet" href="../assets/student.css" />
+  <link rel="stylesheet" href="../assets/student.css?v=2" />
 </head>
 <body>
   <div class="layout">
